<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="search">Search ...</string>
    <string name="catagory">Catagory</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="see_all">See All</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="my_order">My Order</string>
    <string name="wish_list">Wish List</string>
    <string name="profile">Profile</string>
    <string name="qty">Qty.</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="cup_size">Cup Size</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="description">Description</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="choose_your_nfavourite_coffee">Choose Your\nFavourite Coffee</string>
    <string name="the_best_grain_the_finest_roast_nthe_powerful_flavor">The best grain,the finest roast\nthe powerful flavor</string>
    <string name="get_started">Get Started</string>
    <string name="web_client_id">994795155756-bn1etvqbibvrk7gk4giprb1t9qmrg7pi.apps.googleusercontent.com</string>
        <string name="facebook_app_id">1908953879877235</string>  <!-- Replace with your Facebook App ID -->
        <string name="fb_login_protocol_scheme">fb1908953879877235</string>  <!-- fb + your Facebook App ID -->

</resources>